# serverTCP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: dbtxt.h  passchecker.h  pckg.h  sqlite3c.h  tcpserver.h
lib/: sqlite3c.exp  sqlite3c.lib
src/: dbtxt.cpp  main.cpp  passchecker.cpp  tcpserver.cpp
